# avataa-inventory

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.local (2).yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  supervisord.conf
app/: database.py  init_app.py  main.py  models.py  run_grpc.py
app/common/: common_constant.py  common_exceptions.py  common_schemas.py  common_utils.py
app/config/: app_config.py  background_task_config.py  database_config.py  documentation_config.py  grpc_config.py  kafka_config.py  minio_config.py  security_config.py  test_config.py
app/functions/: formula_parser.py  functions_dicts.py
app/functions/db_functions/: db_add.py  db_create.py  db_delete.py  db_filter.py  db_read.py  db_update.py
app/functions/functions_utils/: utils.py
app/functions/validation_functions/: validation_function.py  validation_utils.py
app/migrations/: env.py
app/migrations/versions/: 0ef251b85263_trpm_type_field_removed.py  (+54 more)
app/val_types/: constants.py
tests/: conftest.py  test_requirements.txt
tests/security/: conftest.py  init_dataset.py  inventory_for_tests.sql
tests/test_grpc/: test_getobjwithparams.py  test_getparamsvaluesformo.py  test_gettmoidformo.py
tests/test_kafka/: test_mo.py  test_prm.py  test_tmo.py  test_tprm.py
tests/test_routers/: test_batch_export.py  test_batch_import.py  test_batch_preview.py  test_object.py  test_object_type.py  test_parameter.py  test_parameter_type.py
tests/test_utils/: test_function_utils.py  test_tprmfiltercleaner.py
tests/test_val_types/: conftest.py
(+185 files in other folders)
